# omp-discord-bridge

./: .env.example  .mcp.json.disabled  Cargo.toml  DETAILED_TESTING_GUIDE.md  Dockerfile  MCP_MIGRATION_PLAN.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  docker-compose.yml  install-service.sh  test_checklist.sh
.pingpong/sessions/: 19F2ZRX_dvtP98x2I4UBM.json  6c77XZNqozNyqpAkShuL8.json  8CVMzdvAI1T6MZzmxKtb6.json  F2I5s3g1X9wnau0j-PmUv.json  IISekGfrmoEoM54ETw68B.json  QMbL9WzzXeaw37HYIfQyy.json  WtOZPa8bo0iFAHb_w8bX1.json  m_GML5vO8JmUxhD-2BoE1.json  oGd72_sK_Rybt-bpU6bh4.json  rUkZ_3UnDUlClCBXPKVNK.json
omp-patch/: 0001-add-correlation-id-to-rpc-events.patch  0002-track-and-emit-correlation-ids-in-rpc-mode.patch  COMMIT_MESSAGES.md  PR_DESCRIPTION.md
src/: config.rs  discord.rs  error.rs  main.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/rpc/: client.rs  mod.rs  types.rs
src/services/: discord_service.rs  mod.rs
