[package]
name = "omp_discord_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2.0"


[dev-dependencies]
tokio-test = "0.4"
